WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279188
IPC stream sync message send hangs sometimes when using NotStreamEncodableReply
https://bugs.webkit.org/show_bug.cgi?id=279188
Summary
IPC stream sync message send hangs sometimes when using NotStreamEncodableReply
Kimmo Kinnunen
Reported
2024-09-05 06:32:35 PDT
IPC stream sync message send hangs sometimes when using NotStreamEncodableReply
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2024-09-05 06:33:13 PDT
<
rdar://133004320
>
Kimmo Kinnunen
Comment 2
2024-09-05 07:01:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33183
EWS
Comment 3
2024-09-05 15:46:58 PDT
Committed
283237@main
(efa2afee8f4a): <
https://commits.webkit.org/283237@main
> Reviewed commits have been landed. Closing PR #33183 and removing active labels.
EWS
Comment 4
2024-09-13 09:11:29 PDT
Committed
280938.331@safari-7619-branch
(c92971e92a26): <
https://commits.webkit.org/280938.331@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1739 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug