IPC stream sync message send hangs sometimes when using NotStreamEncodableReply https://bugs.webkit.org/show_bug.cgi?id=279188 rdar://133004320

Reviewed by Simon Fraser.

Normal stream IPC sync message reply protocol is that the reply would be
written to the beginning of the message buffer and the whole buffer
would be released to the client.

In case of NotStreamEncodableReply, the buffer would be released to the
client but the out of stream (OOS) message would be sent via
IPC::Connection. This would be done to support replying with
kernel-transferred objects.

There was be a race condition with the implementation, where the OOS
message would be sent by the server and received by the client before
the server would continue. This would cause the client to write the
subsequent messages to the unexpected index of the message buffer. Once
the server would continue, it would release the message buffer to the
client, overwriting the clients index values.

Fix by first releasing the buffer to the client and then sending the OOS
message.

* Source/WebKit/Platform/IPC/StreamServerConnection.cpp:
(IPC::StreamServerConnection::dispatchStreamMessage):
* Source/WebKit/Platform/IPC/StreamServerConnection.h:
(IPC::StreamServerConnection::sendSyncReply):
* Source/WebKit/Shared/IPCStreamTester.cpp:
(WebKit::IPCStreamTester::syncMessage):
(WebKit::IPCStreamTester::syncMessageNotStreamEncodableReply):
(WebKit::IPCStreamTester::emptyMessage):
* Source/WebKit/Shared/IPCStreamTester.h:
* Source/WebKit/Shared/IPCStreamTester.messages.in:
* Tools/TestWebKitAPI/Tests/IPC/StreamConnectionTests.cpp:
(TestWebKitAPI::TEST_P):

Canonical link: https://commits.webkit.org/283237@main